[package]
name = "mapgen"
version = "0.1.0"
authors = ["Raphael Tang <raphpb1912@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
termcolor = "1.0.4"
lazy_static = "1.3.0"
clap = "2.33.0"
term_size = "0.3.1"
serde = "1.0.91"
serde_json = "1.0.39"
serde_derive = "1.0.91"
termcolor2rgb = "1.0.1"
cfg-if = "0.1.9"
rand = "0.8.5"
web-sys = { version = "0.3.21", features = ["console"], optional = true }
getrandom = { version = "0.2", features = ["js"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
